<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".BasicInfoAction" >

    <TextView
        android:id="@+id/pcLevelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="23dp"
        android:text="@string/character_level_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/pcClassText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pcLevel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/character_class_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/pcWeaponText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/character_weapon_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/continue_text" />

    <Button
        android:id="@+id/addWeaponButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pcWeaponSpinner"
        android:layout_centerHorizontal="true"
        android:text="@string/add_weapon" />

    <Spinner
        android:id="@+id/pcWeaponSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pcWeaponText"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/pcClassSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pcWeaponText"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:spinnerMode="dropdown" />

    <EditText
        android:id="@+id/pcLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pcLevelText"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number" />

</RelativeLayout>